# Brain-Tumor-Detection-using-Deep-Learning

./: .gitignore  BrainTumor10EpochsCategorical.h5  README.md  app.py  extra.py  mainTest.py  mainTrain.py  pyproject.toml  requirements.txt
js/: main.js  pred.js
static/css/: style.css
templates/: index.html
